// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getCoverage function accepts a tsProjectFile option 1`] = `
{
  "anys": [],
  "covered": 100,
  "fileCounts": Map {
    "index.html" => {
      "correctCount": 100,
      "totalCount": 100,
    },
  },
  "percentage": 100,
  "total": 100,
  "uncovered": 0,
}
`;

exports[`getCoverage function accepts a tsProjectFile option 2`] = `
[
  [
    "./app/tsconfig.json",
    {
      "cacheDirectory": undefined,
      "debug": undefined,
      "enableCache": undefined,
      "fileCounts": true,
      "files": undefined,
      "ignoreAsAssertion": undefined,
      "ignoreCatch": undefined,
      "ignoreEmptyType": undefined,
      "ignoreFiles": undefined,
      "ignoreNested": undefined,
      "ignoreNonNullAssertion": undefined,
      "ignoreObject": undefined,
      "ignoreTypeAssertion": undefined,
      "ignoreUnreadAnys": undefined,
      "notOnlyInCWD": undefined,
      "reportSemanticError": undefined,
      "reportUnusedIgnore": undefined,
      "strict": undefined,
    },
  ],
]
`;

exports[`getCoverage function defaults to root project when tsProjectFile is not passed 1`] = `
[
  [
    ".",
    {
      "cacheDirectory": undefined,
      "debug": undefined,
      "enableCache": undefined,
      "fileCounts": true,
      "files": undefined,
      "ignoreAsAssertion": undefined,
      "ignoreCatch": undefined,
      "ignoreEmptyType": undefined,
      "ignoreFiles": undefined,
      "ignoreNested": undefined,
      "ignoreNonNullAssertion": undefined,
      "ignoreObject": undefined,
      "ignoreTypeAssertion": undefined,
      "ignoreUnreadAnys": undefined,
      "notOnlyInCWD": undefined,
      "reportSemanticError": undefined,
      "reportUnusedIgnore": undefined,
      "strict": undefined,
    },
  ],
]
`;

exports[`getCoverage function returns calculated data from type-coverage-core 1`] = `
{
  "anys": [],
  "covered": 100,
  "fileCounts": Map {
    "index.html" => {
      "correctCount": 100,
      "totalCount": 100,
    },
  },
  "percentage": 100,
  "total": 100,
  "uncovered": 0,
}
`;
